instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: value Couleur
setCouleurBrosse(c:Couleur.bleu)
                   ^InstructionsDrawG:1: error: not found: value c
setCouleurBrosse(c:Couleur.bleu)
                 ^